--- a/package.json
+++ b/package.json
@@ -4,15 +4,23 @@
   "main": "index.js",
   "scripts": {
     "main": "tsc && node ./dist/main",
-    "test": "tsc && jest ./dist/test"
+    "test": "tsc && jest ./dist/test",
+    "docker:start": "docker compose up -d",
+    "docker:stop": "docker compose stop",
+    "docker:clean": "docker compose rm -fsv"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "axios": "^1.7.9",
+    "express": "^4.21.2",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.9",
+    "pg-promise": "^11.10.2",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
